Fix java8 compatibility